// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Props Matches snapshot with custom props 1`] = `
.emotion-2 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: white;
  padding: 9px 5px;
  margin: 0px;
  border-radius: 0px;
  border-bottom: 2px solid #b5b6b7;
  border-top: none;
  border-right: none;
  border-left: none;
  text-align: left;
  cursor: pointer;
  outline: none;
  box-shadow: none;
}

.emotion-2:hover {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:focus {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid #b5b6b7;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #808080;
  text-align: left;
}

.emotion-1 {
  content: "";
  width: 0px;
  height: 0px;
  margin-left: 8px;
  margin-right: 5px;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
  border-top: 5px solid #808080;
  border-bottom: 0px;
}

.emotion-4 {
  width: 400px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  width: 100%;
  max-height: 150px;
  overflow-y: scroll;
  z-index: 9999;
  overflow-x: hidden;
  position: absolute;
  left: 0px;
  list-style-type: none;
  margin: 0px;
  padding: 2px 0;
  background-color: white;
  color: black;
  border-radius: 2px;
  display: none;
  box-sizing: border-box;
  top: 100%;
  box-shadow: 0px 3px 3px 2px #d9dadd;
}

.emotion-3::-webkit-scrollbar {
  width: 5px;
}

.emotion-3::-webkit-scrollbar-track {
  background: #ddd;
}

.emotion-3::-webkit-scrollbar-thumb {
  background: #666;
}

<div
  className="emotion-4"
  onKeyDown={[Function]}
>
  <button
    ari-describedby={null}
    aria-label="React Simple Dropdown"
    aria-labelledby={null}
    className="custom-class emotion-2"
    disabled={true}
    id="dropdown"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="emotion-0"
    >
      Custom Placeholder...
    </div>
    <div
      className="emotion-1"
    />
  </button>
  <ul
    className="emotion-3"
  >
    <ForwardRef
      key="1"
      onOptionClicked={[Function]}
      option={
        Object {
          "ariaLabel": "ariaLabel",
          "className": "className",
          "iconClass": "fab fa-js-square",
          "title": "title",
          "value": "1",
        }
      }
      optionClass="className css-1y23m36"
    />
    <ForwardRef
      key="2"
      onOptionClicked={[Function]}
      option={
        Object {
          "ariaLabel": "ariaLabel",
          "className": "className",
          "iconClass": "fab fa-js-square",
          "title": "title",
          "value": "2",
        }
      }
      optionClass="className css-1y23m36"
    />
    <ForwardRef
      key="3"
      onOptionClicked={[Function]}
      option={
        Object {
          "ariaLabel": "ariaLabel",
          "className": "className",
          "iconClass": "fab fa-js-square",
          "title": "title",
          "value": "3",
        }
      }
      optionClass="className css-1y23m36"
    />
  </ul>
</div>
`;

exports[`Check Props Matches snapshot with default props 1`] = `
.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: white;
  padding: 9px 5px;
  margin: 0px;
  border-radius: 0px;
  border-bottom: 2px solid #b5b6b7;
  border-top: none;
  border-right: none;
  border-left: none;
  text-align: left;
  cursor: pointer;
  outline: none;
  box-shadow: none;
}

.emotion-2:hover {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:focus {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid #b5b6b7;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #808080;
  text-align: left;
}

.emotion-3 {
  width: 100%;
  max-height: 175px;
  z-index: 9999;
  overflow-x: hidden;
  position: absolute;
  left: 0px;
  list-style-type: none;
  margin: 0px;
  padding: 2px 0;
  background-color: white;
  color: black;
  border-radius: 2px;
  display: none;
  box-sizing: border-box;
  top: 100%;
  box-shadow: 0px 3px 3px 2px #d9dadd;
}

.emotion-3::-webkit-scrollbar {
  width: 5px;
}

.emotion-3::-webkit-scrollbar-track {
  background: #ddd;
}

.emotion-3::-webkit-scrollbar-thumb {
  background: #666;
}

.emotion-1 {
  content: "";
  width: 0px;
  height: 0px;
  margin-left: 8px;
  margin-right: 5px;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
  border-top: 5px solid #808080;
  border-bottom: 0px;
}

<div
  className="emotion-4"
  onKeyDown={[Function]}
>
  <button
    ari-describedby={null}
    aria-label={null}
    aria-labelledby={null}
    className="emotion-2"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="emotion-0"
    >
      Select ...
    </div>
    <div
      className="emotion-1"
    />
  </button>
  <ul
    className="emotion-3"
  />
</div>
`;

exports[`Check Props Matches snapshot with grouped options 1`] = `
.emotion-8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: white;
  padding: 9px 5px;
  margin: 0px;
  border-radius: 0px;
  border-bottom: 2px solid #b5b6b7;
  border-top: none;
  border-right: none;
  border-left: none;
  text-align: left;
  cursor: pointer;
  outline: none;
  box-shadow: none;
}

.emotion-2:hover {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:focus {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid #b5b6b7;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #808080;
  text-align: left;
}

.emotion-7 {
  width: 100%;
  max-height: 175px;
  z-index: 9999;
  overflow-x: hidden;
  position: absolute;
  left: 0px;
  list-style-type: none;
  margin: 0px;
  padding: 2px 0;
  background-color: white;
  color: black;
  border-radius: 2px;
  display: none;
  box-sizing: border-box;
  top: 100%;
  box-shadow: 0px 3px 3px 2px #d9dadd;
}

.emotion-7::-webkit-scrollbar {
  width: 5px;
}

.emotion-7::-webkit-scrollbar-track {
  background: #ddd;
}

.emotion-7::-webkit-scrollbar-thumb {
  background: #666;
}

.emotion-1 {
  content: "";
  width: 0px;
  height: 0px;
  margin-left: 8px;
  margin-right: 5px;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
  border-top: 5px solid #808080;
  border-bottom: 0px;
}

.emotion-4 {
  padding: 1em 0 0 0;
}

.emotion-3 {
  color: grey;
  font-size: 0.9em;
  padding: 0 10px 3px 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  className="emotion-8"
  onKeyDown={[Function]}
>
  <button
    ari-describedby={null}
    aria-label={null}
    aria-labelledby={null}
    className="emotion-2"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="emotion-0"
    >
      Select ...
    </div>
    <div
      className="emotion-1"
    />
  </button>
  <ul
    className="emotion-7"
  >
    <div
      className="emotion-4"
      key="numbers"
    >
      <div
        className="emotion-3"
      >
        <div>
          NUMBERS
        </div>
        <div>
          10
        </div>
      </div>
      <ForwardRef
        key="1"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "1",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="2"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "2",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="3"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "3",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="4"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "4",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="5"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "5",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="6"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "6",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="7"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "7",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="8"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "8",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="9"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "9",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="10"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "10",
          }
        }
        optionClass="css-1y23m36"
      />
    </div>
    <div
      className="emotion-4"
      key="letters"
    >
      <div
        className="emotion-3"
      >
        <div>
          LETTERS
        </div>
        <div>
          10
        </div>
      </div>
      <ForwardRef
        key="a"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "a",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="b"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "b",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="c"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "c",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="d"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "d",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="e"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "e",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="f"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "f",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="g"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "g",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="h"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "h",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="i"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "i",
          }
        }
        optionClass="css-1y23m36"
      />
      <ForwardRef
        key="j"
        onOptionClicked={[Function]}
        option={
          Object {
            "value": "j",
          }
        }
        optionClass="css-1y23m36"
      />
    </div>
  </ul>
</div>
`;
